[package]
name = "tanuki-quiz-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["fs", "cors"] }
rand = "0.8.5"
image = "0.24"
bytes = "1.6"
# removed reqwest/tokio-util because images are generated locally in Rust
# removed reqwest to avoid heavy dependency and build-time issues on dev machine
uuid = { version = "1.4", features = ["v4"] }
once_cell = "1.20"
parking_lot = "0.12"
